--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "amal-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/aos": "^3.0.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "framer-motion": "^10.16.4",
-    "react-icons": "^4.10.1",
-    "aos": "^2.3.4",
-    "@types/aos": "^3.0.4"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,8 +49,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27"
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
